--- a/view/labanda_view.mustache
+++ b/view/labanda_view.mustache
@@ -1,5 +1,13 @@
-{{> header}}
+
+{{#estado}}
+    {{> header}}
+{{/estado}}
+{{^estado}}
+    {{> header}}
+    <p>Por favor, inicie sesión.</p>
+{{/estado}}
 <!-- The Band Section -->
+<p>{{estado}}</p>
 <div class='w3-container w3-content w3-center w3-padding-64' style='max-width:800px' id='band'>
     <h2 class='w3-wide'>La banda</h2>
     <p class='w3-opacity'><i>We love music</i></p>
