--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 <body>
 
@@ -16,8 +18,10 @@
         <a href="/" class="w3-bar-item w3-button w3-padding-large">La banda</a>
         <a href="/songs/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Canciones</a>
         <a href="/tours/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Presentaciones</a>
+        <a href="/login/login" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Login</a>
     </div>
 </div>
+<p>{{estado}}</p>
 
 
 <!-- Page content -->
