--- a/view/songs_view.mustache
+++ b/view/songs_view.mustache
@@ -1,6 +1,13 @@
-{{> header}}
+{{#isLoggedIn}}
+    {{> header}}
+{{/isLoggedIn}}
+{{^isLoggedIn}}
+    {{> header}}
+    <p>Por favor, inicie sesión.</p>
+{{/isLoggedIn}}
 <div class='w3-container w3-content w3-center w3-padding-64' style='max-width:800px' id='band'>
     <h2 class='w3-wide'>Canciones</h2>
+    <p>{{estado}}</p>
     <table class='w3-table'>
         <tr>
             <th>Cancion</th>
@@ -8,13 +15,7 @@
             <th>reproducir</th>
         </tr>
 
-        {{#canciones}}
-        <tr>
-            <td>{{nombre}}</td>
-            <td>{{duracion}}</td>
-            <td><a href='/song/description/id={{idCancion}}'>Ver</a></td>
-        </tr>
-        {{/canciones}}
+
 
     </table>
 </div>
