--- a/view/create_user_view.mustache
+++ b/view/create_user_view.mustache
@@ -1,15 +1,14 @@
 {{#isLoggedIn}}
-    {{> header_loged}}
+    {{> header}}
     <p>sesión iniciada.</p>
 {{/isLoggedIn}}
 {{^isLoggedIn}}
     {{> header}}
     <p>Por favor, inicie sesión.</p>
 {{/isLoggedIn}}
-
-{{isLoggedIn}}
 <!-- The Band Section -->
-<p>inicio</p>
+<p>crear usuario</p>
+
 
 <!-- End Page Content -->
 </div>
