--- a/view/lobby_usuario_view.mustache
+++ b/view/lobby_usuario_view.mustache
@@ -6,10 +6,11 @@
     {{> header}}
     <p>Por favor, inicie sesión.</p>
 {{/isLoggedIn}}
-
-{{isLoggedIn}}
 <!-- The Band Section -->
-<p>inicio</p>
+<p>lobby</p>
+{{#falopa}}
+<p>falopa</p>
+{{/falopa}}
 
 <!-- End Page Content -->
 </div>
