--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -15,8 +15,8 @@
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="/" class="w3-bar-item w3-button w3-padding-large">La banda</a>
-        <a href="/songs/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Canciones</a>
+        <a href="/" class="w3-bar-item w3-button w3-padding-large">Nombre Del Juego</a>
+        <a href="/user/createUser" class="w3-bar-item w3-button w3-padding-large w3-hide-small">crear usuario</a>
         <a href="/tours/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Presentaciones</a>
         <a href="/login/login" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Login</a>
     </div>
