--- a/view/show_user_view.mustache
+++ b/view/show_user_view.mustache
@@ -9,17 +9,19 @@
 
 {{#userData}}
     <!-- The User Section -->
-    <div>
-        <h2>{{FullName}}</h2>
-        <p>Año de nacimiento: {{BirthYear}}</p>
-        <p>Género: {{Gender}}</p>
-        <p>País: {{Country}}</p>
-        <p>Ciudad: {{City}}</p>
-        <p>Email: {{Email}}</p>
-        <p>Nombre de usuario: {{Username}}</p>
-        <p>Foto de perfil: {{ProfilePicture}}</p>
-        <p>Estado de la cuenta: {{AccountStatus}}</p>
-        <p>Rol: {{Rol}}</p>
+    <div class="container">
+        <h1>Detalles del usuario</h1>
+        <ul class="list-group">
+            <li class="list-group-item">Nombre completo: {{FullName}}</li>
+            <li class="list-group-item">Año de nacimiento: {{BirthYear}}</li>
+            <li class="list-group-item">Género: {{Gender}}</li>
+            <li class="list-group-item">País: {{Country}}</li>
+            <li class="list-group-item">Ciudad: {{City}}</li>
+            <li class="list-group-item">Email: {{Email}}</li>
+            <li class="list-group-item">Nombre de usuario: {{Username}}</li>
+            <li class="list-group-item"><img src="{{ProfilePicture}}" alt="Imagen de perfil"></li>
+            <li class="list-group-item">Estado de cuenta: {{AccountStatus}}</li>
+        </ul>
     </div>
     <!-- End User Section -->
 {{/userData}}
