--- a/view/play_view.mustache
+++ b/view/play_view.mustache
@@ -1,15 +1,9 @@
 {{#isLoggedIn}}
     {{> header_loged}}
-    
-{{/isLoggedIn}}
-{{^isLoggedIn}}
-    {{> header}}
-    <p>Por favor, inicie sesión.</p>
 {{/isLoggedIn}}
 
-{{isLoggedIn}}
 <!-- The Band Section -->
-<p>inicio</p>
+<p>play</p>
 
 <!-- End Page Content -->
 </div>
