--- a/view/lobby_usuario_view.mustache
+++ b/view/lobby_usuario_view.mustache
@@ -1,17 +1,31 @@
 {{#isLoggedIn}}
     {{> header_loged}}
-    <p>sesión iniciada.</p>
 {{/isLoggedIn}}
-{{^isLoggedIn}}
-    {{> header}}
-    <p>Por favor, inicie sesión.</p>
-{{/isLoggedIn}}
-<!-- The Band Section -->
-<p>lobby</p>
-{{#falopa}}
-<p>falopa</p>
-{{/falopa}}
+{{#userData}}
+    <!-- The User Section -->
+    <div class="container">
+        <h1>Detalles del usuario</h1>
+        <ul class="list-group">
+            <li class="list-group-item">Nombre completo: {{FullName}}</li>
+        </ul>
+    </div>
+    <!-- End User Section -->
 
-<!-- End Page Content -->
-</div>
+    <!-- User Actions -->
+    <div class="container mt-4">
+        <h2>Acciones de usuario</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <a href="/game/play" class="btn btn-primary">Nueva partida</a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="btn btn-primary">Ver ranking</a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="btn btn-primary">Nueva pregunta</a>
+            </div>
+        </div>
+    </div>
+    <!-- End User Actions -->
+{{/userData}}
 {{> footer}}
