--- a/view/partial/header_loged.mustache
+++ b/view/partial/header_loged.mustache
@@ -17,7 +17,7 @@
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="/" class="w3-bar-item w3-button w3-padding-large">La banda</a>
         <a href="/user/lobby" class="w3-bar-item w3-button w3-padding-large w3-hide-small">lobby</a>
-        {{! <a href="/tours/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Presentaciones</a> }}
+        <a href="/user/showUser" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Ver tu usuario</a>
         <a href="/login/logout" class="w3-bar-item w3-button w3-padding-large w3-hide-small">logout</a>
     </div>
 </div>
