make ranking y perfiles

--- a/view/lobby_usuario_view.mustache
+++ b/view/lobby_usuario_view.mustache
@@ -19,7 +19,7 @@
                 <a href="/game/play" class="btn btn-primary">Nueva partida</a>
             </div>
             <div class="col-md-4">
-                <a href="#" class="btn btn-primary">Ver ranking</a>
+                <a href="/user/ranking" class="btn btn-primary">Ver ranking</a>
             </div>
             <div class="col-md-4">
                 <a href="#" class="btn btn-primary">Nueva pregunta</a>
