--- a/view/play_view.mustache
+++ b/view/play_view.mustache
@@ -28,6 +28,7 @@
                                             </ul>
                                             <input type="text" name="id" value="{{QuestionID}}" id="QuestionID" style="display:none">
                                             <button type="submit" class="btn btn-primary">Responder</button>
+                                            <a href="/game/reportQuestion?id={{QuestionID}}" target="_blank" class="btn btn-primary">Reportar pregunta</a>
                                         </form>
                                     </div>
                                 </div>
