--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -25,6 +25,16 @@
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
   </form>
+  {{#errorData}}
+  <div class="alert alert-danger" role="alert">
+    Usuario o contraseña incorrecta
+  </div>
+  {{/errorData}}
+  {{#errorActivate}}
+    <div class="alert alert-danger" role="alert">
+      Debe activar el usuario
+    </div>
+  {{/errorActivate}}
 </main>
 
 </div>
