--- a/view/partial/header_editor.mustache
+++ b/view/partial/header_editor.mustache
@@ -15,9 +15,11 @@
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="/" class="w3-bar-item w3-button w3-padding-large">La banda</a>
+        <a href="/" class="w3-bar-item w3-button w3-padding-large">Nombre del juego</a>
         <a href="/user/lobby" class="w3-bar-item w3-button w3-padding-large w3-hide-small">lobby</a>
         <a href="/user/showUser" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Ver tu usuario</a>
+        <a href="/question/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Preguntas</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reportes</a>
         <a href="/login/logout" class="w3-bar-item w3-button w3-padding-large w3-hide-small">logout</a>
     </div>
 </div>
