--- a/view/list_categories_view.mustache
+++ b/view/list_categories_view.mustache
@@ -11,14 +11,18 @@
                 <tr>
                 <th>Categoría</th>
                 <th>Color</th>
+                <th>Propiedad</th>
                 </tr>
             </thead>
             <tbody>
                 {{#categories}}
                 <tr>
                 <td>{{CategoryName}}</td>
+                <td style="background-color: {{CategoryColor}};">
+                    
+                </td>
                 <td>
-                    <span class="badge" style="background-color: {{CategoryColor}};"></span>
+                    <a href="#" onclick="alert('no se puede eliminar papu, es pegriloso')" class="btn btn-primary" > Eliminar </a>
                 </td>
                 </tr>
                 {{/categories}}
@@ -45,8 +49,8 @@
             {{#categories}}
             <tr>
             <td>{{CategoryName}}</td>
-            <td>
-                <span class="badge" style="background-color: {{CategoryColor}}; width:80px">   </span>
+            <td style="background-color: {{CategoryColor}};">
+                
             </td>
             <td>
                 <a href="#" onclick="alert('no se puede eliminar papu, es pegriloso')" class="btn btn-primary" > Eliminar </a>
