--- a/view/partial/header_editor.mustache
+++ b/view/partial/header_editor.mustache
@@ -19,7 +19,7 @@
         <a href="/user/lobby" class="w3-bar-item w3-button w3-padding-large w3-hide-small">lobby</a>
         <a href="/user/showUser" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Ver tu usuario</a>
         <a href="/question/list" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Preguntas</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reportes</a>
+        <a href="/question/list_reported" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reportes</a>
         <a href="/login/logout" class="w3-bar-item w3-button w3-padding-large w3-hide-small">logout</a>
     </div>
 </div>
