--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -21,75 +21,47 @@
                 </form>
             </div>
             <h2>Estadisticas</h2>
+            <a type="submit" class="btn btn-primary" href="/admin/estadisticas?startDate='{{startDate}}'&endDate='{{endDate}}'">Descargar pdf</a>
             <div class="row">
                 <!-- Imagen 1 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{barcharUsuariosActivos}}' class="card-img-top" alt="Gráfico 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 1</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
                 <!-- Imagen 2 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{barcharUsuariosPorEdad}}' class="card-img-top" alt="Gráfico 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 2</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
                 <!-- Imagen 3 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{barcharUsuariosPorSexo}}' class="card-img-top" alt="Gráfico 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 3</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
                 <!-- Imagen 4 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{barcharUsuariosPorPais}}' class="card-img-top" alt="Gráfico 4">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 4</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
                 <!-- Imagen 5 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{barcharUsuarioPorcentaje}}' class="card-img-top" alt="Gráfico 5">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 5</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
                 <!-- Imagen 6 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{piecharCategoriaPorcentaje}}' class="card-img-top" alt="Gráfico 6">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 6</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
-                linecharJugadas
                 <div class="col-md-4">
                     <div class="card">
                         <img src='data:image/png;base64,{{linecharJugadas}}' class="card-img-top" alt="Gráfico 6">
-                        <div class="card-body">
-                            <h5 class="card-title">Gráfico 6</h5>
-                            <a href="#" class="btn btn-primary">Ver</a>
-                        </div>
                     </div>
                 </div>
             </div>
