--- a/view/lobby_usuario_view.mustache
+++ b/view/lobby_usuario_view.mustache
@@ -94,13 +94,7 @@
             <h2>Acciones de Administrador</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="/admin/estadisticas" class="btn btn-primary">Usuarios</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="/user/ranking" class="btn btn-primary">Ver ranking</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="/question/create" class="btn btn-primary">Nueva pregunta</a>
+                    <a href="/admin/estadisticas" class="btn btn-primary">Estadisticas</a>
                 </div>
             </div>
         </div>
