--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -21,7 +21,7 @@
                 </form>
             </div>
             <h2>Estadisticas</h2>
-            <a type="submit" class="btn btn-primary" href="/admin/estadisticas?startDate='{{startDate}}'&endDate='{{endDate}}'">Descargar pdf</a>
+            <a type="submit" class="btn btn-primary" href="/admin/estadisticas?startDate={{startDate}}&endDate={{endDate}}">Descargar pdf</a>
             <div class="row">
                 <!-- Imagen 1 -->
                 <div class="col-md-4">
