--- a/view/ranking_users_view.mustache
+++ b/view/ranking_users_view.mustache
@@ -31,6 +31,7 @@
                     <th>Usuario</th>
                     <th>Total Score</th>
                     <th>Total Partidas</th>
+                    <th>Nivel</th>
                     <th>Perfil</th>
                 </tr>
             </thead>
@@ -41,6 +42,7 @@
                     <td>{{Username}}</td>
                     <td>{{TotalScore}}</td>
                     <td>{{TotalWins}}</td>
+                    <td>{{nivel}}</td>
                     <td><a href="/user/showUser?id={{UserID}}" class="btn btn-primary">Ver Perfil</a></td>
                 </tr>
                 {{/userData}}
