--- a/view/inicio_view.mustache
+++ b/view/inicio_view.mustache
@@ -13,7 +13,22 @@
 {{/isLoggedIn}}
 <!-- The Band Section -->
 
-
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+    <!-- The Band Section -->
+    <div class="w3-container w3-content w3-center" style="max-width:800px">
+        <h2 class="w3-wide">¡Bienvenido a Nombre Del Juego!</h2>
+        <p class="w3-opacity">Un emocionante juego de preguntas y respuestas</p>
+        <p class="w3-justify">Nombre Del Juego es un juego de preguntas y respuestas diseñado para poner a prueba tus conocimientos en diferentes áreas. 
+            Debes responder entre distintas categorías de preguntas y enfrentarte a desafiantes cuestionamientos. Cada pregunta acertada te sumará puntos,
+            mientras que si respondes incorrectamente, la partida terminará.
+            ¿Estás listo para demostrar cuánto sabes? ¡Únete ahora y comienza la diversión!
+        </p>
+        <a href="/user/createUser" class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Crear una cuenta</a>
+    </div>
+</div>
 <!-- End Page Content -->
+
+
 </div>
 {{> footer}}
